# Proyecto-Estructuras

./: .gitignore  CMakeLists.txt  README.md
assets/fonts/: README.md
include/: application.h  graphics.h  state.h  texture_manager.h  util.h
include/TDA-Oh/: cards.h  cartas.h  deck.h  enum.h  health.h  jugador.h  mano.h  mazo.h  player.h  salud.h  turn_manager.h  turnos.h
include/TDAs/: list.h  lista.h  map.h  mapa.h  pila.h  queue.h  stack.h
include/cards/: cards.h
include/cartas/: cartas.h
include/graphics/: color.h  drawable.h  render_window.h  sprite.h  text.h  texture.h  transformable.h
include/states/: duel.h  start.h
src/: Application.cpp  main.cpp  texture_manager.cpp  util.cpp
src/TDA-OH/: health.cpp  player.cpp
src/TDAs/: lista.cpp  mapa.cpp  pila.cpp
src/cards/: cards.cpp
src/cartas/: cartas.cpp
src/graphics/: render_window.cpp  sprite.cpp  text.cpp  transformable.cpp
src/states/: duel.cpp  start.cpp
